problemi di codifica utf8; script gloss.sh

--- a/doc/Esterni/Glossario/terminiGlossario.tex
+++ b/doc/Esterni/Glossario/terminiGlossario.tex
@@ -1,51 +1,57 @@
-\item[accoppiamento] Grado di dipendenza tra i vari componenti di un sistema.
-\item[amministratore di progetto] Chi controlla che ad ogni istante della vita del progetto le risorse (umane, materiali, economiche e strutturali) siano presenti e operanti; inoltre, gestisce la documentazione e controlla il versionamento e la configurazione.
-\item[analista] Chi ha il compito di individuare, a partire dai bisogni del cliente, il problema e decomporlo in requisiti da fornire ai progettisti.
+\item[Accoppiamento] Grado di dipendenza tra i vari componenti di un sistema.
+\item[Amministratore di progetto] Chi controlla che ad ogni istante della vita del progetto le risorse (umane, materiali, economiche e strutturali) siano presenti e operanti; inoltre, gestisce la documentazione e controlla il versionamento e la configurazione.
+\item[Analista] Chi ha il compito di individuare, a partire dai bisogni del cliente, il problema e decomporlo in requisiti da fornire ai progettisti.
 \item[Asana] Servizio web utilizzato per coordinare le attività di project management.
-
-\item[backup] Replicazione di materiale informativo archiviato nella memoria di massa dei computer, al fine di prevenire la perdita definitiva dei dati in caso di eventi malevoli accidentali o intenzionali.
-\item[baseline] Nel ciclo di vita di un progetto, punto d'arrivo tecnico dal quale non si retrocede.
-\item[branch] All'interno di un repository, insieme di versioni in evoluzione.
-\item[browser] Applicazione per visualizzare pagine web.
-\item[caso d'uso] Insieme di scenari che hanno in comune un obiettivo per un utente.
-\item[ciclo di vita (di un prodotto)] Insieme degli stati che il prodotto assume, dal concepimento al ritiro.
-\item[client] Componente hardware e/o software che richiede servizi o risorse a un server.
-\item[configurazione] Di quali parti si compone un prodotto e il modo in cui esse stanno assieme.
-\item[controllore della qualità] Funzione aziendale (e non ruolo di progetto) di chi accerta la qualità dei prodotti.
-\item[CSS3] Linguaggio web utilizzato per descrivere l'aspetto e la formattazione di un sito web al browser.
-\item[diagramma dei casi d'uso] Grafo orientato in cui ogni nodo rappresenta un attore o un caso d'uso; ogni arco può essere una comunicazione tra un attore e un caso d'uso oppure una relazione (di estensione, inclusione o generalizzazione) tra due casi d'uso o tra due attori.
+\item[Astah] Strumento software sviluppato da Change Vision per la modellazione UML. Offre diverse funzionalità fra cui la possibilità di creare diagrammi delle classi, diagrammi dei casi d’uso, diagrammi delle attività, diagrammi di sequenza e diagrammi dei componenti.
+\item[AWS] Acronimo per Amazon Web Services è una piattaforma di servizi cloud in grado di offrire potenza di elaborazione, storage di database, distribuzione dei contenuti e altre funzionalità a supporto del dimensionamento e della crescita delle attività aziendali.
+\item[Backup] Replicazione di materiale informativo archiviato nella memoria di massa dei computer, al fine di prevenire la perdita definitiva dei dati in caso di eventi malevoli accidentali o intenzionali.
+\item[Baseline] Nel contesto dell'Ingegneria del Software, ed in particolare del ciclo di vita di un particolare progetto, punto d'arrivo tecnico dal quale non si retrocede.
+\item[Branch] All'interno di un repository, insieme di versioni in evoluzione.
+\item[Browser] Si tratta di un’applicazione software che permette il recupero, la presentazione e la navigazione di risorse su web. Svolge principalmente due funzioni essenziali: invia nella rete la richiesta di uno specifico documento secondo uno specifico protocollo di comunicazione e interpreta la risorsa in risposta presentendola all’utente che ne ha avviato la richiesta.
+\item[Caso d'uso] Insieme di scenari, di cui uno principale e più alternativi, che hanno in comune il raggiungimento di uno specifico obiettivo da parte dell'utente di un programma software; è una tecnica usata nei processi di ingegneria del software per effettuare in maniera esaustiva e non ambigua, la raccolta dei requisiti.
+\item[Ciclo di vita (di un prodotto)] L'insieme degli stati che un prodotto software assume, dal concepimento al ritiro delle transizioni fra tali stati (ovvero quelle attività svolte sul prodotto che servono a farlo avanzare nel grado di maturazione).
+\item[Client] Componente hardware e/o software che richiede servizi o risorse a un server.
+\item[Configurazione] Di quali parti si compone un prodotto e il modo in cui esse interagiscono fra di loro.
+\item[Controllore della qualità] Funzione aziendale (e non ruolo di progetto) di chi accerta la qualità dei prodotti.
+\item[CSS3] Acronimo per Cascade Stylesheet Language 3, è l'ultima versione - ancora in via di definizione standard - del linguaggio CSS, usato per definire la formattazione di documenti HTML, XHTML e XML come ad esempio i siti web e le relative pagine web.
+\item[Design pattern] Soluzione progettuale generale ad un problema ricorrente. Si tratta di una descrizione o modello logico da applicare per la risoluzione di un problema che può presentarsi in diverse situazioni durante le fasi di progettazione e sviluppo del software.
+\item[Diagramma dei casi d'uso] Grafo orientato in cui ogni nodo rappresenta un attore o un caso d'uso; ogni arco può essere una comunicazione tra un attore e un caso d'uso oppure una relazione (di estensione, inclusione o generalizzazione) tra due casi d'uso o tra due attori.
 \item[Diagramma di Gantt] Diagramma usato principalmente nelle attività di amministrazione di progetto; permette la rappresentazione grafica di un calendario di attività, utile al fine di pianificare, coordinare e tracciare specifiche attività in un progetto dando una chiara illustrazione dello stato d’avanzamento del progetto rappresentato.
 \item[Diagramma Nassi–Shneiderman] Notazione grafica per la rappresentazione della programmazione strutturata a blocchi. 
-\item[diagramma WBS] Diagramma che decompone in modo gerarchico le attività di un progetto in sotto-attività (coese ma non necessariamente sequenziali): Work Breakdown Structure.
-\item[documentazione] Tutto ciò che documenta le attività di un progetto.
-\item[DRI] Acronimo per Directly Responsible Individual, è un modello di lavoro adottato inizialmente da Apple e successivamente da Asana che consiste nell'identificare un singolo responsabile per ogni attività assegnabile. Il team decide di seguire questo modello. La motivazione principale risiede in questa frase: "When nobody knows who’s doing what, and when someone doesn’t feel ultimately responsible for driving work forward, the work may not happen at all."
-
-Riferimento: https://blog.asana.com/2015/06/why-one-assignee/ 
-\item[efficacia] Conformità alle attese.
-\item[efficienza] Contenimento dei costi per raggiungere un obiettivo.
+\item[Diagramma WBS] Diagramma che decompone in modo gerarchico le attività di un progetto in sotto-attività (coese ma non necessariamente sequenziali): Work Breakdown Structure.
+\item[Documentazione] Insieme di documenti che descrivono le attività di progetto e le funzionalità, la struttura, l'implementazione e le modalità di utilizzo di un determinato prodotto software. 
+\item[DRI] Acronimo per Directly Responsible Individual, è un modello di lavoro adottato inizialmente da Apple e successivamente da Asana che consiste nell'identificare un singolo responsabile per ogni attività assegnabile. Il team decide di seguire questo modello. La motivazione principale risiede in questa frase: "When nobody knows who’s doing what, and when someone doesn’t feel ultimately responsible for driving work forward, the work may not happen at all." Riferimento: https://blog.asana.com/2015/06/why-one-assignee/ 
+\item[Efficacia] Conformità alle attese.
+\item[Efficienza] Contenimento dei costi per raggiungere un obiettivo.
+\item[Framework]  La struttura operativa nella quale viene elaborato un dato software; un framework, in generale, include software di supporto, librerie, un linguaggio per gli script e altre componenti applicative che possono aiutare a realizzare le varie componenti di un progetto.
 \item[GitHub] Servizio web di hosting per repository, che usa il sistema di versionamento Git; può essere utilizzato anche per la condivisione e la modifica di file di testo e documenti revisionabili.
-\item[glossario] Elenco dei termini più rilevanti di un documento (o di un insieme di documenti) e loro significati.
-\item[Gulpease, indice di] Indice, tarato sulla lingua italiana, che misura la qualità di un documento stimandone il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione, ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe --- cosa che ne consente una implementazione automatizzata fortemente affidabile. 
+\item[Glossario] Elenco dei termini più rilevanti di un documento (o di un insieme di documenti) e loro significati.
+\item[Gulpease, indice di] Indice, tarato sulla lingua italiana, che misura la qualità di un documento stimandone il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione, ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe - cosa che ne consente una implementazione automatizzata fortemente affidabile. 
 \item[HTML5] Linguaggio di markup per la strutturazione del contenuto di una pagina web.
 \item[IDE]  Acronimo per Integrated Development Environment, ovvero Ambiente di Sviluppo Integrato; si riferisce ad un software che, in fase di programmazione, aiuta i programmatori nello sviluppo del codice sorgente di un programma. Spesso l'IDE aiuta lo sviluppatore segnalando errori di sintassi del codice direttamente in fase di scrittura, oltre a tutta una serie di strumenti e funzionalità di supporto alla fase di sviluppo e debugging.
-\item[indice generale] Elenco delle parti in cui è strutturato un documento.
-\item[infrastruttura] Tutte le risorse hardware e software (di un progetto).
+\item[Indice generale] Elenco delle parti in cui è strutturato un documento.
+\item[Infrastruttura] Tutte le risorse hardware e software (di un progetto).
 \item[Instagantt] Applicazione web per la creazione di diagrammi di Gantt.
-\item[Java] Linguaggio di programmazione orientato agli oggetti a tipizzazione statica (con una sua piattaforma di elaborazione) sviluppato da Sun Microsystems nel 1995.
+\item[IntelliJ Idea] IDE per il linguaggio Java.
+\item[ISO/IEC 9126:2001] Le norme ISO/IEC 9126:2001 descrivono un modello di qualità del software, definiscono le caratteristiche che la determinano e propongono metriche per la sua misurazione.
+\item[Java] Linguaggio di programmazione orientato agli oggetti a tipizzazione statica, con una propria piattaforma di elaborazione, sviluppato da Sun Microsystems nel 1995.
 \item[Javadoc] Programma di utilità incluso nel SDK di Java con il quale è possibile generare in modo automatico la documentazione in formato HTML dei sorgenti di un programma Java, a patto che vengano utilizzate delle regole ben precise nella scrittura dei commenti stessi.
 \item[JavaScript] Linguaggio di scripting orientato agli oggetti e agli eventi, comunemente utilizzato per la creazione, in siti web e applicazioni web, di effetti dinamici interattivi tramite funzioni invocate da eventi innescati dall’utente sulla pagina web.
-\item[LaTEX] Linguaggio di markup utilizzato per la produzione di documentazione tecnica e scientifica; è lo standard de facto per la comunicazione e la pubblicazione di documenti scientifici ed è disponibile come software libero.
-\item[milestone] Punto nel tempo associato ad un valore strategico per un progetto.
+\item[Latex] Linguaggio di markup utilizzato per la produzione di documentazione tecnica e scientifica; è lo standard de facto per la comunicazione e la pubblicazione di documenti scientifici ed è disponibile come software libero.
+\item[Milestone] Punto nel tempo associato ad un valore strategico per un progetto.
 \item[MySQL] Software per la gestione di database relazionali.
-\item[schema PDCA] Schema iterativo di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi); noto anche come ciclo di Deming o ciclo di miglioramento continuo, viene utilizzato in attività per il controllo e il miglioramento continuo di processi e prodotti.
+\item[PDCA (schema)] Schema iterativo di auto-miglioramento che consiste di quattro punti: Plan (individuare obiettivi di miglioramento), Do (eseguire ciò che si è pianificato), Check (verificare se ha funzionato) e Act (agire per correggersi); noto anche come ciclo di Deming o ciclo di miglioramento continuo, viene utilizzato in attività per il controllo e il miglioramento continuo di processi e prodotti.
+\item[PDF] Acronimo per Portable Document Format, è un formato di file usato per presentare e scambiare documenti indipendentemente dal software, dall'hardware o dal sistema operativo. Ideato da Adobe, il formato PDF è diventato uno standard aperto incluso nella categoria ISO (International Organization for Standardization). I file PDF possono contenere collegamenti e pulsanti, campi modulo, audio, video e funzionalità di business logic.
 \item[PHP] Linguaggio di scripting orientato agli oggetti, utilizzato soprattutto per generare dinamicamente pagine web.
-\item[pianificazione] L'organizzazione e il controllo di tempo, risorse e risultati.
+\item[Pianificazione] L'organizzazione e il controllo di tempo, risorse e risultati.
 \item[PragmaDB] Software per la gestione di documenti creati durante il ciclo di vita di un progetto software.
-\item[progettazione] Processo di definizione dell'architettura, dei componenti, delle interfacce e delle altre caratteristiche di un sistema o componente.
-\item[progettista] Chi sintetizza una soluzione a partire dalle specifiche di un problema già analizzato.
-\item[progetto] Insieme di compiti da svolgere in modo collaborativo a fronte di un incarico (che diventa poi un impegno).
-\item[programmatore] Chi implementa una parte della soluzione dei progettisti.
+\item[Processo (software)] Insieme di attività correlate e coese che trasformano ingressi in uscite secondo regole fissate, consumando risorse nel farlo.
+\item[Progettazione] Processo di definizione dell'architettura, dei componenti, delle interfacce e delle altre caratteristiche di un sistema o componente.
+\item[Progettista] Chi sintetizza una soluzione a partire dalle specifiche di un problema già analizzato.
+\item[Progetto] Insieme di compiti da svolgere in modo collaborativo a fronte di un incarico (che diventa poi un impegno).
+\item[Programmatore] Chi implementa una parte della soluzione dei progettisti.
 \item[qualifica] Verifica e validazione.
+\item[Repository] Ambiente di un sistema informativo in cui vengono gestiti metadati attraverso tabelle relazionali. Il repository utilizzato dal team Hivex è fornito dalla piattaforma GitHub.
 \item[requisito] Bisogno da soddisfare o vincolo da rispettare.
 \item[requisito di processo] Vincolo sullo sviluppo del prodotto.
 \item[requisito di prodotto] Bisogno o vincolo sul prodotto da sviluppare.
@@ -53,17 +59,17 @@ Riferimento: https://blog.asana.com/2015/06/why-one-assignee/
 \item[requisito funzionale] Servizio che un prodotto è tenuto a fornire.
 \item[requisito non funzionale] Vincolo su uno o più servizi che un prodotto fornisce.
 \item[responsabile di progetto] Chi pianifica il progetto, assegna le persone ai ruoli giusti e rappresenta il progetto presso il  committente.
-\item[ruolo] Funzione assegnata a progetto; identifica capacità e compiti.
-\item[scenario] Sequenza di passi che descrive un esempio di interazione tra l'utente e il sistema.
-\item[server] Componente hardware e/o software che fornisce servizi o risorse a chi ne fa richiesta.
-\item[sistema] Insieme di componenti organizzati per compiere una o più funzioni.
+\item[Ruolo] Funzione assegnata a progetto che identifica capacità e compiti relativi ad un determinato soggetto.
+\item[Scenario] Sequenza di passi che descrive un esempio di interazione tra l'utente e il sistema.
+\item[Server] Componente hardware e/o software che fornisce servizi o risorse a chi ne fa richiesta.
+\item[Sistema] Insieme di componenti organizzati ed integrati per svolgere una o più funzioni.
 \item[Slack ] Piattaforma per la comunicazione all'interno di un'organizzazione.
-\item[slack, periodo di] Margine temporale che definisce per quanto tempo si possa ritardare un’attività.
+\item[Slack, periodo di] Margine temporale che definisce per quanto tempo si possa ritardare un’attività.
 \item[sommario] Breve riassunto del contenuto di un documento.
 \item[SonarQube] Piattaforma open source per il controllo della qualità del codice sorgente.
 \item[SPICE] Acronimo per Software Process Improvement and Capability Determination; è un insieme di documenti tecnici standard per il processo di sviluppo software e le funzioni di gestione di business correlati. È uno degli standard congiunti dell’Organizzazione Internazionale per la Standardizzazione (ISO) e della Commissione Elettrotecnica Internazionale (IEC); corrisponde allo standard ISO/IEC 15504.
 \item[SQL] Structured Query Language: linguaggio di programmazione dichiarativo basato sull'algebra relazionale che serve a creare, manipolare e interrogare basi di dati relazionali.
-\item[stakeholder] Persona a vario titolo coinvolta nel ciclo di vita del software e che ha influenza sul prodotto o sul suo processo di sviluppo. Tale gruppo varia nella sua composizione a seconda dei diversi progetti, ma include sempre utenti/operatori e clienti (che necessariamente non sono sempre gli stessi).
+\item[Stakeholder] Persona a vario titolo coinvolta nel ciclo di vita del software e che ha influenza sul prodotto o sul suo processo di sviluppo. Tale gruppo varia nella sua composizione a seconda dei diversi progetti, ma include sempre utenti/operatori e clienti (che necessariamente non sono sempre gli stessi).
 \item[Team] Gruppo di persone che collabora nello svolgimento di un’attività.
 \item[Travis] Servizio di integrazione continua utilizzato per testare progetti software ospitati su GitHub.
 \item[Trello] Servizio utilizzato per coordinare le attività di project management.
